fix: Smart time-based ordering for search results and stop order fix
- Changed search results sorting from duration-based to smart time ordering
- Upcoming buses (departure time >= current time) shown first
- Buses sorted by departure time ascending within each group
- Fixed stop order calculation to use sequential counter
- Fixed recalculateStopOrdersByTime to preserve original order when times are null